vlib/v/checker/tests/check_generic_int_init.vv
fn test<T>() T {
	return T{}
}

fn main() {
	_ := test<int>()
}
